test/files/neg/t0214.check
t0214.scala:3: error: missing parameter type
  a2p(x => x._1,(2,3))
      ^
one error found
